--- a/adapters/build.gradle
+++ b/adapters/build.gradle
@@ -11,7 +11,7 @@ repositories {
 
 dependencies {
     compile project(':hexagon')
-    compile 'com.squareup:otto:1.3.9-SNAPSHOT'
+    compile fileTree(dir: '../libs', include: ['*.jar'])
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'com.squareup.okhttp:mockwebserver:2.4.0'
