--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.2.3'
+    classpath 'com.android.tools.build:gradle:1.3.1'
   }
 }
 apply plugin: 'com.android.application'
@@ -14,13 +14,13 @@ repositories {
 }
 
 android {
-  compileSdkVersion 22
-  buildToolsVersion "22.0.1"
+  compileSdkVersion 23
+  buildToolsVersion "23.0.1"
 
   defaultConfig {
     applicationId "com.pguardiola.catanarchitecture.app"
     minSdkVersion 16
-    targetSdkVersion 22
+    targetSdkVersion 23
     versionCode 1
     versionName "1.0"
 
@@ -44,12 +44,12 @@ android {
 }
 
 dependencies {
-  compile 'com.squareup:otto:1.3.9-SNAPSHOT'
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.android.support:appcompat-v7:22.2.0'
-  compile 'com.android.support:support-annotations:22.2.0'
+  compile fileTree(dir: '../libs', include: ['*.jar'])
+  compile 'com.android.support:appcompat-v7:23.0.1'
+  compile "com.android.support:recyclerview-v7:23.0.1"
+
   // Testing-only dependencies
-  androidTestCompile 'com.android.support.test:runner:0.3'
-  androidTestCompile 'com.android.support.test:rules:0.3'
-  androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
+  androidTestCompile 'com.android.support.test:runner:0.4.1'
+  androidTestCompile 'com.android.support.test:rules:0.4.1'
+  androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
 }
