--- a/hexagon/build.gradle
+++ b/hexagon/build.gradle
@@ -10,6 +10,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.squareup:otto:1.3.9-SNAPSHOT'
+    compile fileTree(dir: '../libs', include: ['*.jar'])
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
