--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,13 @@ allprojects {
 
   apply plugin: 'checkstyle'
 
+  checkstyle {
+    toolVersion = "6.7"
+    configFile = '../config/checkstyle/checkstyle.xml' as File
+  }
+
   task checkstyle(type: Checkstyle) {
-    configFile file('../checkstyle/checkstyle.xml')
+    configFile file('../config/checkstyle/checkstyle.xml')
     source 'src'
     include '**/*.java'
     exclude '**/gen/**'
