--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ repositories {
 
 android {
   compileSdkVersion 23
-  buildToolsVersion "23.0.1"
+  buildToolsVersion "23.0.2"
 
   defaultConfig {
     applicationId "com.pguardiola.catanarchitecture.app"
@@ -45,11 +45,16 @@ android {
 
 dependencies {
   compile fileTree(dir: '../libs', include: ['*.jar'])
-  compile 'com.android.support:appcompat-v7:23.0.1'
-  compile "com.android.support:recyclerview-v7:23.0.1"
+  compile 'com.android.support:appcompat-v7:23.1.1'
+  compile "com.android.support:recyclerview-v7:23.1.1"
+  compile 'com.pguardiola:hexgrid:0.0.2'
 
   // Testing-only dependencies
   androidTestCompile 'com.android.support.test:runner:0.4.1'
   androidTestCompile 'com.android.support.test:rules:0.4.1'
   androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+}
+
+configurations.all {
+  resolutionStrategy.force 'com.android.support:support-annotations:23.0.1'
 }
