--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
   compile project(':hexagon')
   compile project(':adapters')
 
+  testCompile 'junit:junit:4.12'
+  testCompile "org.mockito:mockito-core:1.10.19"
+
   // Testing-only dependencies
   androidTestCompile 'com.android.support.test:runner:0.4.1'
   androidTestCompile 'com.android.support.test:rules:0.4.1'
