--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 language: android
-
 env:
-  matrix:
-    - ANDROID_TARGET=android-18 ANDROID_ABI=armeabi-v7a
   global:
-    # wait up to 10 minutes for adb to connect to emulator
-    - ADB_INSTALL_TIMEOUT=10
+    - ADB_INSTALL_TIMEOUT=8 # 8 minutes (2 minutes by default)
 
 android:
   components:
@@ -15,17 +11,13 @@ android:
     - extra-android-support
     - extra-google-m2repository
     - extra-android-m2repository
-    # Emulator for the tests
-    - sys-img-armeabi-v7a-android-18
+    - sys-img-armeabi-v7a-android-19
 
-script:
 before_script:
-  - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 script:
-  - ./gradlew check build -PdisablePreDex --continue --stacktrace
-  - android-wait-for-emulator
-  - adb devices
-  - adb shell input keyevent 82 &
-  - ./gradlew connectedCheck -PdisablePreDex --continue --stacktrace
+  - ./gradlew checkstyle build connectedCheck
